feat: Re-enable and update JEI integration for 1.21.4
This commit re-enables and updates the Just Enough Items (JEI) integration for Minecraft 1.21.4.

Key changes include:
- Migrated ArmadilloBrushingMixin to the common mixins file and removed the fabric-specific mixins file.
- Updated JEI API usage across IdentifyingCategory, JeiPlugin, IdentifyingRecipe, and ModRecipes to align with 1.21.4 changes.
- Corrected recipe JSON files to use "ingredient" instead of "input" and fixed an enchantment name in penetrating_strike_from_identifying.json.
- Implemented Neoforge client-side recipe handling for JEI integration.