@@ -1,14 +1,14 @@
 package net.Pandarix.compat.jei;
-// Disabled because JEI is not available for 1.21.4
-/*
+
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.RecipeIngredientRole;
-import mezz.jei.api.recipe.RecipeType;
 import mezz.jei.api.recipe.category.IRecipeCategory;
+import mezz.jei.api.recipe.types.IRecipeHolderType;
+import mezz.jei.api.recipe.types.IRecipeType;
 import net.Pandarix.BACommon;
 import net.Pandarix.block.ModBlocks;
 import net.Pandarix.compat.jei.recipe.IdentifyingRecipe;
@@ -17,18 +17,18 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 
-public class IdentifyingCategory implements IRecipeCategory<IdentifyingRecipe>
+public class IdentifyingCategory implements IRecipeCategory<RecipeHolder<IdentifyingRecipe>>
 {
-    public static final ResourceLocation UID = BACommon.createResource("identifying");
-    public static final ResourceLocation TEXTURE = BACommon.createResource(
+    public static final ResourceLocation UID = BACommon.createRLoc("identifying");
+    public static final ResourceLocation TEXTURE = BACommon.createRLoc(
             "textures/gui/archeology_table_overlay.png");
 
-    public static final RecipeType<IdentifyingRecipe> IDENTIFYING_RECIPE_TYPE =
-            new RecipeType<>(UID, IdentifyingRecipe.class);
+    public static final IRecipeHolderType<IdentifyingRecipe> IDENTIFYING_RECIPE_TYPE = IRecipeType.create(IdentifyingRecipe.Type.INSTANCE);
 
     private final IDrawable background;
     private final IDrawable icon;
@@ -41,7 +41,7 @@ public class IdentifyingCategory implements IRecipeCategory<IdentifyingRecipe>
 
     @Override
     @NotNull
-    public RecipeType<IdentifyingRecipe> getRecipeType()
+    public IRecipeHolderType<IdentifyingRecipe> getRecipeType()
     {
         return IDENTIFYING_RECIPE_TYPE;
     }
@@ -68,14 +68,13 @@ public class IdentifyingCategory implements IRecipeCategory<IdentifyingRecipe>
     }
 
     @Override
-    public void setRecipe(IRecipeLayoutBuilder builder, IdentifyingRecipe recipe, @NotNull IFocusGroup focuses)
+    public void setRecipe(IRecipeLayoutBuilder builder, RecipeHolder<IdentifyingRecipe> recipe, IFocusGroup focuses)
     {
         builder.addSlot(RecipeIngredientRole.INPUT, 80, 20).addItemStacks(
-                List.of(Items.BRUSH.getDefaultInstance(), ModItems.IRON_BRUSH.get().getDefaultInstance(), ModItems.DIAMOND_BRUSH.get().getDefaultInstance(), ModItems.NETHERITE_BRUSH.get().getDefaultInstance())
-        );
+                List.of(Items.BRUSH.getDefaultInstance(), ModItems.IRON_BRUSH.get().getDefaultInstance(), ModItems.DIAMOND_BRUSH.get().getDefaultInstance(), ModItems.NETHERITE_BRUSH.get().getDefaultInstance()));
 
-        builder.addSlot(RecipeIngredientRole.INPUT, 26, 48).addIngredients(recipe.getIngredients().get(0));
+        builder.addSlot(RecipeIngredientRole.INPUT, 26, 48).add(recipe.value().placementInfo().ingredients().getFirst());
 
-        builder.addSlot(RecipeIngredientRole.OUTPUT, 134, 48).addItemStack(recipe.getResult(3));
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 134, 48).add(recipe.value().getResult(3));
     }
-}*/
+}
